--- a/view/community/questionDetail.html
+++ b/view/community/questionDetail.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" type="text/css" href="../../css/question.css">
     <link rel="stylesheet" type="text/css" href="../../css/question-detail.css">
     <link rel="stylesheet" type="text/css" href="../../css/question-comment.css">
+    
+
     <style>
         .questions-item-link:hover {
           text-decoration: none;
@@ -147,124 +149,32 @@
         </style>
 
 
-
+           
 </head>
 
 <body id="body">
     
     <header include-html="../commons/header.html"></header>
     <nav include-html="../commons/menuComm.html"></nav>
+
     <div class="row">
 
     <div class="col-xl-2"></div>
     
     <div class="col-xl-6">
-        <div class="question-detail-container">
+        <div class="question-detail-container" id="question-detail-container">
             <div class="question-detail-header" style="margin-top: 25px;">
                 <h4 style="color: coral; font-weight: 600;">질문과답변</h4>
-                <h2 class="question-detail-title">식물을 기르고싶은데</h2>
+                <h2 class="question-detail-title"></h2>
             </div>
             <br>
             <div class="question-detail-body">
 
                 <div class="question-detail-content">
                     <p>
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-                        극락조나 몬테리아를 기르고싶은데
-                        새로 입주할 원룸이 북향이라
-                        해가 안들거든요
-                        키울수있는 방법 없을까요ㅜ
-
+                       asfdds
                     </p>
-                    <img src="../image/wdg.gif">
+                    <img class="question-detail-img" src="">
                 </div>
 
                 <br><br><br>
@@ -344,7 +254,6 @@
                 </section>
             </section>
 
-
             <!-- <div class="question-detail-footer">
                 <div class="question-detail-comment-section">
                     <div class="comment-feed">
@@ -389,18 +298,18 @@
         </div>
     </div>
 
-    <div class="col-xl-2" style="border-left: 1px solid #ededed;">
+    <div class="col-xl-2" style="">
         
             <div class="question-detail-sidebar" >
                 <div class="sidebar-header">
                     <div class="sidebar-header-writer">
                         <div class="row">
                             <div class="questions-writer-image" style="float: left;">
-                                <img src="../image/ddda.gif" style="width: 50px; height: 50px; border-radius: 70%"
-                                onerror="this.src='.../image/avatar.png'"><!-- 프로필사진, 에러시 프로필사진-->
+                                <img class="questions-writer-image-image" src="" style="width: 50px; height: 50px; border-radius: 70%"
+                                onerror="this.src='../image/avatar.png'"> <!--프로필사진, 에러시 프로필사진 -->
                             </div>
-                            <div class="questions-writer-nickname" style="color: coral; font-size: 20px; margin-left: 15px; ">현성이배통통
-                                <div class="questions-writer-profile" style="color: black; font-size: 16px; ">장현성입니다</div>
+                            <div class="questions-writer-nickname" style="color: coral; font-size: 20px; margin-left: 15px; ">
+                                <div class="questions-writer-profile" style="color: black; font-size: 16px; "></div>
                             </div>
                             
                         </div>
@@ -427,9 +336,71 @@
 
 </body>
 
+<script>
+$(document).ready(function(){
+
+    let urlParams = location.search.split(/[?&]/).slice(1).map(function(paramPair) {
+            return paramPair.split(/=(.+)?/).slice(0, 2);
+        }).reduce(function(obj, pairArray) {
+            obj[pairArray[0]] = pairArray[1];
+            return obj;
+        }, {});
+
+    let seq = urlParams.seq;	// html 에서 html 이동할때 값 가져가는 그런 코드
+
+    let sessionId = JSON.parse(sessionStorage.getItem("login"));
+    console.log(sessionId);
+
+    // $('.questions-writer-image-image').attr('src',sessionId.profileName);
+    // $('.questions-writer-nickname').text(sessionId.nickname);
+    // if(sessionId.auth == 0 || sessionId.auth == ''){
+    //     $('.questions-writer-profile').text('test');
+    // } else {
+    //     $('.questions-writer-profile').text(sessionId.auth);
+    // }
+    //해당 글에 대한 내용 뿌리기
+    $.ajax({
+        url:"http://localhost:3000/questionDetail",
+        type:'post',
+        data:{questionSeq:seq},
+        success:function(list){
+            alert('detail ajax 성공');
+            alert(JSON.stringify(list));
+
+            $('.question-detail-title').text(list.questionTitle);
+            $('.question-detail-content').html(list.questionContent);
+            $('.question-detail-img').attr('src',list.questionFileName);
+            
+
+        },error:function(list){
+            alert('detail ajax 대실패!!');
+        }
+
+    });
+
+    /*
+    <div class="question-detail-container">
+            <div class="question-detail-header" style="margin-top: 25px;">
+                <h4 style="color: coral; font-weight: 600;">질문과답변</h4>
+                <h2 class="question-detail-title">식물을 기르고싶은데</h2>
+            </div>
+            <br>
+    */
+
+
+
+
+
+});
+   
+
+</script>
+
 <script src="../../assets/js/jquery.min.js"></script>
 <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/includeHTML.js"></script>
 <script src="../../js/header.js"></script>
+
+
 
 </html>
